# loom

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  config.toml  flake.nix  loom.toml
.beads/: .gitignore  config.yaml  metadata.json
.beads/dolt-remote/: 6cqeqt33um8dqrghnnvetufacotgujjc  7itbmnpbmnk0gmnoulmsgu0smtsvopd2.darc  cjhau9glkd0rmuegls4a3jkhkgblabka  fp6v2qjm1drnrvuulhrhthdv2fthnnst.darc  g7ot4igmlfn3pneenvumpl5bmuepkksc.darc  ghnprlmebuhtrg2iqq9qgol8qraj2ips  lreim2hilrpkqhiqvbrbnlkt8pg2p1ff  lri5pvsbth9shrbrq4olcigpfnjf8ftf  manifest  o8tulqf4uu1agfejelmlnfj5vkvbvpvp.darc  obiibhsotqkdm84uegaeplfosrcbn3bj.darc  qeqgop5tqhsnvtbnnecojvab1ucjvm19.darc  ts40uq3ditl6evkjihlgfinpqmbciaio
.cargo/: config.toml
.wrix/: push-verified
crates/loom-agent/: Cargo.toml
crates/loom-agent/src/: lib.rs  skill.rs
crates/loom-agent/src/claude/: backend.rs  messages.rs  parser.rs
crates/loom-agent/src/direct/: backend.rs  mod.rs
crates/loom-agent/src/direct/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
crates/loom-agent/src/pi/: backend.rs  messages.rs  parser.rs
crates/loom-agent/tests/: normalization.rs  properties.rs  static_dispatch.rs
crates/loom-driver/: Cargo.toml
crates/loom-driver/src/: lib.rs  markdown.rs  scratch.rs  testing.rs
crates/loom-driver/src/agent/: backend.rs  error.rs  kind.rs  mod.rs  parse.rs  repin.rs  session.rs
crates/loom-driver/src/bd/: client.rs  error.rs  label.rs  mod.rs  models.rs
crates/loom-driver/src/config/: agent.rs  agent_observer.rs  direct.rs  error.rs  logs.rs  loom_section.rs  loop_config.rs  mod.rs  runner.rs  skills.rs
crates/loom-driver/src/git/: client.rs  environment.rs  error.rs  hooks.rs  mod.rs  oid.rs  signing.rs
crates/loom-driver/src/lock/: error.rs  manager.rs  mod.rs
crates/loom-driver/src/logging/: mod.rs  retention.rs
crates/loom-driver/src/profile_manifest/: error.rs  manifest.rs  mod.rs
crates/loom-driver/src/state/: companions.rs  db.rs  error.rs  migrate.rs  mod.rs  rebuild.rs
crates/loom-driver/tests/: git_client.rs  lock_manager.rs  logging.rs  prek_lock.rs  properties.rs  state_db.rs
crates/loom-llm/: Cargo.toml
crates/loom-llm/src/: api_key.rs  conversation.rs  lib.rs  model_id.rs  request.rs  tool.rs  usage.rs
crates/loom-llm/src/client/: mod.rs  multi_provider.rs  openai_compat.rs
crates/loom-llm/src/observer/: doom_loop.rs  duplicate_result.rs  mod.rs  result_hasher.rs
crates/loom-protocol/: Cargo.toml
crates/loom-protocol/src/: gate.rs  lib.rs  todo.rs
crates/loom-protocol/src/gate/: options.rs
crates/loom-protocol/tests/: protocol_surface.rs
crates/loom-skills/: Cargo.toml
crates/loom-skills/builtin/base/loom-context-before-edit/: skill.md
crates/loom-skills/builtin/base/loom-final-reporting/: skill.md
crates/loom-skills/builtin/base/loom-inbox-resolution/: skill.md
crates/loom-skills/builtin/base/loom-review-finding-recall/: skill.md
crates/loom-skills/builtin/base/loom-scope-discipline/: skill.md
crates/loom-skills/builtin/base/loom-todo-decomposition/: skill.md
crates/loom-skills/builtin/base/loom-tune-proposal-handoff/: skill.md
crates/loom-skills/builtin/base/loom-verify-after-edit/: skill.md
crates/loom-skills/builtin/base/loom-workspace-discipline/: skill.md
crates/loom-skills/builtin/rust/loom-rust-change-planning/: skill.md
crates/loom-skills/builtin/rust/loom-rust-review/: skill.md
crates/loom-skills/builtin/rust/loom-rust-style-rules/: skill.md
crates/loom-skills/builtin/rust/loom-rust-verification/: skill.md
crates/loom-skills/src/: builtin.rs  disclosure.rs  discovery.rs  document.rs  identity.rs  lib.rs  registry.rs  source.rs
crates/loom-templates/: Cargo.toml
crates/loom-templates/src/: criterion_status.rs  finding.rs  lib.rs  previous_failure.rs  workspace_recovery.rs
crates/loom-templates/src/inbox/: mod.rs
crates/loom-templates/src/msg/: mod.rs
crates/loom-templates/src/plan/: mod.rs  update.rs
crates/loom-templates/src/review/: mod.rs
crates/loom-templates/src/run/: mod.rs
crates/loom-templates/src/todo/: mod.rs  new.rs  update.rs
crates/loom-templates/templates/: inbox.md  loop.md  msg.md  plan.md  plan_new.md  plan_update.md  review.md  run.md  todo.md  todo_new.md  todo_update.md
crates/loom-templates/templates/partial/: chat_interview.md  chat_marker_final_turn_only.md  decomposition_discipline.md  dependency_wait.md  exit_signals.md  findings_walk.md  interview_modes.md  invariant_clash.md  options_format.md  plan_stage_rubric.md  progress_markers.md  review_rubric.md  review_self_report_markers.md  scratchpad.md  self_report_markers.md  sibling_spec_editing.md  skill_index.md  todo_success.md  workspace_recovery.md
crates/loom-templates/tests/: loom_protocol_surface.rs  public_contract.rs  render.rs  snapshots.rs
crates/loom-templates/tests/snapshots/: snapshots__inbox_snapshot.snap  snapshots__msg_snapshot.snap  snapshots__plan_new_snapshot.snap  snapshots__plan_snapshot.snap  snapshots__plan_update_snapshot.snap  snapshots__review_snapshot.snap  snapshots__run_snapshot.snap  snapshots__run_snapshot_build_failure.snap  snapshots__run_snapshot_driver_notice.snap  snapshots__run_snapshot_no_failure.snap  snapshots__run_snapshot_review_concern.snap  snapshots__run_snapshot_verify_failures.snap  snapshots__run_snapshot_workspace_recovery.snap  snapshots__todo_new_snapshot.snap  snapshots__todo_snapshot.snap  snapshots__todo_update_snapshot.snap
crates/loom-tune/: Cargo.toml
crates/loom-tune/src/: case.rs  checker.rs  config.rs  evidence.rs  executor.rs  gate.rs  lib.rs  plan.rs  proposal.rs  score.rs  target.rs
crates/loom-tune/src/checker/: protocol_boundary.rs
docs/: README.md  architecture.md  spec-conventions.md  style-rules.md  tuning.md
nix/: lib.nix  loom.nix  worker-profile.nix  workspace.nix
scripts/: check-shell-reexec  full-test.sh  run-smoke.sh  test-sandbox.sh
specs/: agent.md  events.md  gate.md  harness.md  llm.md  pre-commit.md  skills.md  templates.md  tests.md
tests/: default.nix  run-tests.sh
(+292 files in other folders)
