[package]
name = "loom-driver"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
displaydoc = { workspace = true }
gix = { workspace = true }
loom-events = { workspace = true }
loom-protocol = { workspace = true }
loom-render = { workspace = true }
pulldown-cmark = { workspace = true }
rusqlite = { workspace = true }
rustix = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[features]
# Exposes the signing-key injection seam (`GitClient::set_signing_key_override`)
# used by the test suite to drive the signing path without mutating
# `$WRIX_SIGNING_KEY` (unsafe `env::set_var` is forbidden under edition 2024).
# Off in production builds; the self dev-dependency below turns it on for tests.
test-support = []

[dev-dependencies]
anyhow = { workspace = true }
loom-driver = { path = ".", features = ["test-support"] }
loom-test-support = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tokio-test = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
