[package]
name = "loom-skills"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[package.metadata.loom]
public_contract = true

[dependencies]
blake3 = { workspace = true }
displaydoc = { workspace = true }
loom-events = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
